Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86044

When a ListView is removing items with a transition and there is delay remove used then when the last item is removed the footer does not go to the top of the view

    XMLWordPrintable

Details

    • 028c70da42e026b71cc809fc3e13298f4c2366bb

    Description

      When a ListView is removing items with a transition and there is delay remove used then when the last item is removed the footer does not go to the top of the view.

      Attachments

        For Gerrit Dashboard: QTBUG-86044
        # Subject Branch Project Status CR V

        Activity

          People

            tonyl Tony Leinonen
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes