If ListView visibleItems count is zero update footer

After removing the last visible item from ListView the footer jumped
back to its original position. Call updateFooter if the are no items
in the visibleItems list to set the footer to its correct position.

Task-number: QTBUG-86044
Pick-to: 6.2
Change-Id: Id226304030ecc8db26d413670a908f50feef5ba0
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>